@@ -1,5 +1,6 @@
 package com.gentics.mesh.util;
 
+import java.io.File;
 import java.nio.file.Path;
 
 import org.slf4j.Logger;
@@ -25,10 +26,16 @@ public final class FilesystemUtil {
 	public static boolean supportsDirectIO(Path path) {
 		if (Platform.isLinux()) {
 			try {
-				final int fd = ONative.instance().open(path.toAbsolutePath().toString(),
+				path.toFile().mkdirs();
+				Path testPath = path.resolve(".check_fs_support");
+				File testFile = testPath.toFile();
+				if (testFile.exists()) {
+					testFile.delete();
+				}
+				final int fd = ONative.instance().open(testPath.toAbsolutePath().toString(),
 					ONative.O_WRONLY | ONative.O_CREAT | ONative.O_EXCL | ONative.O_APPEND | ONative.O_DIRECT);
 				ONative.instance().close(fd);
-				return path.toFile().delete();
+				return testFile.delete();
 			} catch (Exception e) {
 				if (log.isDebugEnabled()) {
 					log.debug("Got an error while testing for directIO support. This is to be expected when directIO is not supported.", e);
