@@ -25,6 +25,10 @@ include::content/docs/variables.adoc-include[]
 
 * The Mesh Server will require Java 11 with the release of 2.0.0. The runtime support for Java 8 will be dropped. The Mesh Java REST client will still be usable with Java 8.
 
+[[unreleased]]
+
+icon:check[] Core: The storage filesystem compatibility check has been made more reliable. 
+
 [[v1.4.0]]
 == 1.4.0 (24.01.2020)
 
